derive/ui_test/fail/get_type.stderr
error[E0382]: use of moved value: `s`
  --> ui_test/fail/get_type.rs:13:13
   |
10 |     let s = S { a: 0 };
   |         - move occurs because `s` has type `S`, which does not implement the `Copy` trait
11 |     let _ = s.a();
   |               --- `s` moved due to this method call
12 |     // s is moved and no longer valid
13 |     let _ = s.a();
   |             ^ value used here after move
   |
note: `S::a` takes ownership of the receiver `self`, which moves `s`
  --> ui_test/fail/get_type.rs:3:10
   |
3  | #[derive(Getter)]
   |          ^^^^^^
   = note: this error originates in the derive macro `Getter` (in Nightly builds, run with -Z macro-backtrace for more info)
